# audioDSP

./: .gitattributes  .gitignore  AudioPlayer.cpp  AudioPlayer.hh  AudioUtils.cpp  CMakeLists.txt  DSP.cpp  FIR.cpp  Main.cpp  Makefile  Math.cpp  Player.cpp  README.md  player.cpp
Include/: AudioPlayer.hh
include/: AudioFile.h  AudioUtils.hh  DSP.hh  FIR.hh  Math.hh  Player.hh
src/: AudioUtils.cpp  DSP.cpp  FIR.cpp  Main.cpp  Math.cpp  Player.cpp
tests/: DSP_test.cpp  Math_test.cpp  old_tests  test.sh
